FLY wire David/force-app/main/default/objects/Passfort_Webhook_Log__c/Passfort_Webhook_Log__c.object-meta.xml
<CustomObject>
    <label>Passfort Webhook Log</label>
    <nameField>
        <displayFormat>PWL-{0000000}</displayFormat>
        <label>Passfort Webhook Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passfort Webhook Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>