FLY wire David/force-app/main/default/objects/Passfort_Webhook_Log__c/fields/Extracted_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Profile_Id__c</fullName>
    <inlineHelpText>Passfort ProfileId extracted from the request body JSON</inlineHelpText>
    <label>Extracted Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>