FLY wire David/force-app/main/default/objects/Passfort_Webhook_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message when processing the request.</description>
    <inlineHelpText>Message when processing the request.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>