FLY wire David/force-app/main/default/objects/Passfort_Webhook_Log__c/fields/Request_body__c.field-meta.xml
<CustomField>
    <fullName>Request_body__c</fullName>
    <description>Request body from webhook.</description>
    <inlineHelpText>Request body from webhook</inlineHelpText>
    <label>Request body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>